testdata/baselines/reference/submodule/conformance/jsdocTypeTag.errors.txt
a.js(19,12): error TS2304: Cannot find name 'Void'.
a.js(25,12): error TS2304: Cannot find name 'Undefined'.
a.js(31,12): error TS2304: Cannot find name 'Null'.
a.js(37,12): error TS2314: Generic type 'T[]' requires 1 type argument(s).
a.js(40,12): error TS2552: Cannot find name 'array'. Did you mean 'Array'?
a.js(43,12): error TS2314: Generic type 'Promise<T>' requires 1 type argument(s).
a.js(46,12): error TS2552: Cannot find name 'promise'. Did you mean 'Promise'?
b.ts(1,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'S' must be of type 'String', but here has type 'string'.
b.ts(3,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'N' must be of type 'Number', but here has type 'number'.
b.ts(5,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'B' must be of type 'Boolean', but here has type 'boolean'.
b.ts(18,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'Obj' must be of type 'Object', but here has type 'any'.
b.ts(19,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'obj' must be of type 'object', but here has type 'any'.


==== a.js (7 errors) ====
    /** @type {String} */
    var S;
    
    /** @type {string} */
    var s;
    
    /** @type {Number} */
    var N;
    
    /** @type {number} */
    var n;
    
    /** @type {Boolean} */
    var B;
    
    /** @type {boolean} */
    var b;
    
    /** @type {Void} */
               ~~~~
!!! error TS2304: Cannot find name 'Void'.
    var V;
    
    /** @type {void} */
    var v;
    
    /** @type {Undefined} */
               ~~~~~~~~~
!!! error TS2304: Cannot find name 'Undefined'.
    var U;
    
    /** @type {undefined} */
    var u;
    
    /** @type {Null} */
               ~~~~
!!! error TS2304: Cannot find name 'Null'.
    var Nl;
    
    /** @type {null} */
    var nl;
    
    /** @type {Array} */
               ~~~~~
!!! error TS2314: Generic type 'T[]' requires 1 type argument(s).
    var A;
    
    /** @type {array} */
               ~~~~~
!!! error TS2552: Cannot find name 'array'. Did you mean 'Array'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Array' is declared here.
    var a;
    
    /** @type {Promise} */
               ~~~~~~~
!!! error TS2314: Generic type 'Promise<T>' requires 1 type argument(s).
    var P;
    
    /** @type {promise} */
               ~~~~~~~
!!! error TS2552: Cannot find name 'promise'. Did you mean 'Promise'?
    var p;
    
    /** @type {?number} */
    var nullable;
    
    /** @type {Object} */
    var Obj;
    
    /** @type {object} */
    var obj;
    
    /** @type {Function} */
    var Func;
    
    /** @type {(s: string) => number} */
    var f;
    
    /** @type {new (s: string) => { s: string }} */
    var ctor;
    
==== b.ts (5 errors) ====
    var S: string;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'S' must be of type 'String', but here has type 'string'.
!!! related TS6203 a.js:2:5: 'S' was also declared here.
    var s: string;
    var N: number;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'N' must be of type 'Number', but here has type 'number'.
!!! related TS6203 a.js:8:5: 'N' was also declared here.
    var n: number
    var B: boolean;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'B' must be of type 'Boolean', but here has type 'boolean'.
!!! related TS6203 a.js:14:5: 'B' was also declared here.
    var b: boolean;
    var V :void;
    var v: void;
    var U: undefined;
    var u: undefined;
    var Nl: null;
    var nl: null;
    var A: any[];
    var a: any[];
    var P: Promise<any>;
    var p: Promise<any>;
    var nullable: number | null;
    var Obj: any;
        ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'Obj' must be of type 'Object', but here has type 'any'.
!!! related TS6203 a.js:53:5: 'Obj' was also declared here.
    var obj: any;
        ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'obj' must be of type 'object', but here has type 'any'.
!!! related TS6203 a.js:56:5: 'obj' was also declared here.
    var Func: Function;
    var f: (s: string) => number;
    var ctor: new (s: string) => { s: string };
    